otb_module_test()

set(OTBInSarTests
otbInSarTestDriver.cxx
otbBaselineCalculatorNew.cxx
otbBaselineFunctorBaseNew.cxx
otbHorizontalVerticalBaselineFunctorNew.cxx
otbHorizontalVerticalBaselineFunctorTest.cxx
otbLengthOrientationBaselineFunctorNew.cxx
otbLengthOrientationBaselineFunctorTest.cxx
otbParallelPerpendicularBaselineFunctorNew.cxx
otbParallelPerpendicularBaselineFunctorTest.cxx
otbPlatformPositionToBaselineCalculatorNew.cxx
otbComplexInterpolateImageFunctionNew.cxx
otbMultivariateRationalTransform.cxx

otbPlatformPositionToBaselineCalculatorTest.cxx
otbBaselineCalculatorTest.cxx
)

add_executable(otbInSarTestDriver ${OTBInSarTests})
target_link_libraries(otbInSarTestDriver ${OTBInSar-Test_LIBRARIES})
otb_module_target_label(otbInSarTestDriver)

# Tests Declaration

#otb_add_test(NAME prTuVectorDataProjectionFilterFromGeoToMap COMMAND otbInSarTestDriver
  #otbBaselineCalculatorNew
  #${INPUTDATA}/ToulousePointsWGS.sqlite
  #${INPUTDATA}/QB_Toulouse_Ortho_PAN.tif
  #${TEMP}/prTvVectorDataProjectionFilterFromGeoToMap.shp
  #)
  
otb_add_test(NAME inTuBaselineCalculatorNew COMMAND otbInSarTestDriver
  otbBaselineCalculatorNew)

otb_add_test(NAME inTuBaselineFunctorBaseNew COMMAND otbInSarTestDriver
  otbBaselineFunctorBaseNew)
  
otb_add_test(NAME inTuHorizontalVerticalBaselineFunctorNew COMMAND otbInSarTestDriver
  otbHorizontalVerticalBaselineFunctorNew)
  
otb_add_test(NAME inTuHorizontalVerticalBaselineFunctorTest COMMAND otbInSarTestDriver
  otbHorizontalVerticalBaselineFunctorTest)
  
 
otb_add_test(NAME inTuLengthOrientationBaselineFunctorNew COMMAND otbInSarTestDriver
  otbLengthOrientationBaselineFunctorNew)
  
otb_add_test(NAME inTuLengthOrientationBaselineFunctorTest COMMAND otbInSarTestDriver
  otbLengthOrientationBaselineFunctorTest)
  
  
otb_add_test(NAME inTuParallelPerpendicularBaselineFunctorNew COMMAND otbInSarTestDriver
  otbParallelPerpendicularBaselineFunctorNew)
  
otb_add_test(NAME inTuParallelPerpendicularBaselineFunctorTest COMMAND otbInSarTestDriver
  otbParallelPerpendicularBaselineFunctorTest)
  
otb_add_test(NAME inTuPlatformPositionToBaselineCalculatorNew COMMAND otbInSarTestDriver
  otbPlatformPositionToBaselineCalculatorNew)
  
otb_add_test(NAME inTuComplexInterpolateImageFunctionNew COMMAND otbInSarTestDriver
  otbComplexInterpolateImageFunctionNew)
  
otb_add_test(NAME inTuMultivariateRationalTransformNew COMMAND otbInSarTestDriver
  otbMultivariateRationalTransformNew)


IF(OTB_DATA_USE_LARGEINPUT)

otb_add_test(NAME inTvPlatformPositionToBaselineCalculatorTest COMMAND otbInSarTestDriver
otbPlatformPositionToBaselineCalculatorTest
	LARGEINPUT{TERRASARX/2008-03-10_GrandCanyon_SSC/TSX1_SAR__SSC______SM_S_SRA_20080310T133220_20080310T133228/IMAGEDATA/IMAGE_HH_SRA_strip_011.cos}
	LARGEINPUT{TERRASARX/2008-03-21_GrandCanyon_SSC/TSX1_SAR__SSC______SM_S_SRA_20080321T133220_20080321T133228/IMAGEDATA/IMAGE_HH_SRA_strip_011.cos}
)

otb_add_test(NAME inTvBaselineCalculatorTest COMMAND otbInSarTestDriver
otbBaselineCalculatorTest
	LARGEINPUT{TERRASARX/2008-03-10_GrandCanyon_SSC/TSX1_SAR__SSC______SM_S_SRA_20080310T133220_20080310T133228/IMAGEDATA/IMAGE_HH_SRA_strip_011.cos}
	LARGEINPUT{TERRASARX/2008-03-21_GrandCanyon_SSC/TSX1_SAR__SSC______SM_S_SRA_20080321T133220_20080321T133228/IMAGEDATA/IMAGE_HH_SRA_strip_011.cos}
)


ENDIF(OTB_DATA_USE_LARGEINPUT)
